fix: refix height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@ body {
   font-family: 'MuseoModerno', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #282c34;
+  background-image: url(../public/background.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 code {
@@ -11,17 +18,13 @@ code {
 }
 
 #root{
-  height: 100%;
-  background-color: #282c34;
-  min-height: 100vh;
+  /* https://blog.logrocket.com/improving-mobile-design-latest-css-viewport-units/ */
+  height: 100vh; /* Fallback for browsers that do not support dynamic vewiport units */
+  height: 100dvh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(../public/background.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
   /* justify-content: center; */
   /* font-size: calc(10px + 2vmin); */
   /* color: white; */
